# repartipy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
repartipy/: __init__.py  size_estimator.py  utils.py
repartipy/exceptions/: __init__.py  exceptions.py
tests/: conftest.py  test_size_estimator.py  test_utils.py
tests/fixtures/: fixtures.py
