[tool.poetry]
name = "repartipy"
version = "0.1.8"
description = "Helper for handling PySpark DataFrame partition size 📑🎛️"
authors = ["sakjung <ssangyu123@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sakjung/repartipy"
keywords = ['apachespark', 'spark', 'pyspark']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

###########################################################################
#                         MAIN DEPENDENCIES
###########################################################################
[tool.poetry.dependencies]
python = ">=3.7"
typing-extensions = "^4.5"
packaging = "^23"

###########################################################################
#                         DEPENDENCY GROUPS
###########################################################################
[tool.poetry.group.development]
optional = true
[tool.poetry.group.development.dependencies]
pyspark = ">2"

[tool.poetry.group.testing]
optional = true
[tool.poetry.group.testing.dependencies]
pytest = ">=7.4"

[tool.poetry.group.linting]
optional = true
[tool.poetry.group.linting.dependencies]
ruff = "^0.1.14"
isort = "^5.11"

###########################################################################
#                         LINTING CONFIGURATION
###########################################################################

[tool.ruff]
select = ["ALL"]
line-length = 150
ignore = [
    "D100",
    "D203",    # Ignore blank line before summary of class
    "D213",    # Ignore multiline summary second line
    "T201",    # Allow print() in code.
    "D401",    # Docstrings should be in imperative modes
    "D404",    # Boring thing about how to write docsrings
    "FBT001",  # Boolean positional arg is OK
    "FBT002",  # Boolean default arg value is OK
    "D205",    # It is broken
    "TCH003",  # ?
    "PLC1901", # Strange thing
    "UP007",   # Not supported in py3.6
    "UP038",   # Not supported in all py versions
    "SLF001",  # Private member accessed
    "COM812",  # Trailing comma missing
    "ISC001",  # ?
    "D107",    # Missing docstring in `__init__`
    "D105",    # Missing docstring in magic method
    "ANN101",  # Missing type annotation for `self` in method
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in `this`
    "I001",    # Import block is un-sorted or un-formatted
    "N806",    # variable should be in lowercase
]
extend-exclude = ["tests"]

[tool.ruff.per-file-ignores]
"repartipy/__init__.py" = ["F401", "F403"]
"repartipy/exceptions/__init__.py" = ["F401", "F403"]